--- a/templates/snippets/newsletter.html
+++ b/templates/snippets/newsletter.html
@@ -1,7 +1,9 @@
 <div class="info">
     <p>
         Thanks for reading! I mostly write about Rust and my (open-source) projects. If you would like to receive future posts automatically,
-            you can subscribe via <a href="/rss.xml">RSS</a> or email:
+                                                                            you can subscribe via
+        <a href="/rss.xml">RSS</a>
+        or email:
     </p>
     <form action="https://tinyletter.com/mre" method="post" onsubmit="window.open('https://tinyletter.com/mre', 'popupwindow', 'scrollbars=yes,width=800,height=600'); return true" target="popupwindow">
         <p>
@@ -22,5 +24,9 @@
             <path d="M4.25 2.5c-1.336 0-2.75 1.164-2.75 3 0 2.15 1.58 4.144 3.365 5.682A20.565 20.565 0 008 13.393a20.561 20.561 0 003.135-2.211C12.92 9.644 14.5 7.65 14.5 5.5c0-1.836-1.414-3-2.75-3-1.373 0-2.609.986-3.029 2.456a.75.75 0 01-1.442 0C6.859 3.486 5.623 2.5 4.25 2.5zM8 14.25l-.345.666-.002-.001-.006-.003-.018-.01a7.643 7.643 0 01-.31-.17 22.075 22.075 0 01-3.434-2.414C2.045 10.731 0 8.35 0 5.5 0 2.836 2.086 1 4.25 1 5.797 1 7.153 1.802 8 3.02 8.847 1.802 10.203 1 11.75 1 13.914 1 16 2.836 16 5.5c0 2.85-2.045 5.231-3.885 6.818a22.08 22.08 0 01-3.744 2.584l-.018.01-.006.003h-.002L8 14.25zm0 0l.345.666a.752.752 0 01-.69 0L8 14.25z" fill-rule="evenodd"></path>
         </svg>
         <span>Sponsor me on Github</span>
+    </a>
+    <a aria-label="Amazon wishlist" class="btn btn-sm" href="https://www.amazon.de/hz/wishlist/ls/361PJ2MNLWL16?ref_=wl_share">
+        <svg viewBox="0 0 16 16" class="btn-ico" height="16"><defs/><path fill="none" stroke="#999" stroke-width="1.668" d="M4.068 2.493c-1.058.005-2.138.354-3.237 1.03v9.231c1.099-.676 2.179-1.025 3.237-1.03 1.058-.006 2.096.33 3.111 1.03v-9.23c-1.015-.7-2.053-1.037-3.111-1.031zm7.864 0c-1.058-.006-2.096.33-3.111 1.03v9.231c1.015-.7 2.053-1.036 3.111-1.03 1.058.005 2.138.354 3.237 1.03v-9.23c-1.099-.677-2.179-1.026-3.237-1.031z"/></svg>
+        <span>My Amazon wish list</span>
     </a>
 </p>
