improve tag layout

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -590,7 +590,7 @@ h4 {
 
 .tag {
   padding: 4px 10px;
-  margin-right: 4px;
+  margin-left: 4px;
   border-radius: 25px;
   text-decoration: none;
   font-style: italic;
