fix syntax error (missing end tag)

--- a/templates/404.html
+++ b/templates/404.html
@@ -9,10 +9,10 @@
 
 <body>
     <h1>Redirecting...</h1>
-    <a href="/">Click here if you are not redirected.<a>
-            <script>
-                location = '/'
-            </script>
+    <a href="/">Click here if you are not redirected.</a>
+    <script>
+        location = '/'
+    </script>
 </body>
 
 </html>
