--- a/templates/snippets/newsletter.html
+++ b/templates/snippets/newsletter.html
@@ -15,7 +15,7 @@
 
 <p>
     <a aria-label="Submit blog post to Hacker News" class="btn btn-sm" href="https://news.ycombinator.com/submitlink?u=https://endler.dev{{ page.path | safe }}&t={{ page.title | safe }}">
-        <svg height="16" width="16" aria-hidden="true" class="btn-ico" clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.41" version="1.1" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><g transform="matrix(.0593 0 0 .0593 -8.6 -3.86)" stroke-width="1.05"><path d="m145 65h270v270h-270z" fill="#fb651e"/><path d="m271 218-46.3-86.8h21.2l27.3 54.9c0.42 0.979 0.909 1.99 1.47 3.04 0.559 1.05 1.05 2.13 1.47 3.25 0.281 0.42 0.489 0.804 0.63 1.15 0.14 0.349 0.279 0.663 0.42 0.943 0.698 1.4 1.33 2.76 1.89 4.09 0.559 1.33 1.05 2.55 1.47 3.67 1.12-2.38 2.34-4.93 3.67-7.65 1.33-2.73 2.69-5.56 4.09-8.49l27.7-54.9h19.7l-46.8 87.9v56h-17.8z" fill="#fff" fill-rule="nonzero"/>
+        <svg height="16" width="16" aria-hidden="true" class="btn-ico" clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.41" version="1.1" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><g transform="matrix(.0593 0 0 .0593 -8.6 -3.86)" stroke-width="1.05"><path d="m145 65h270v270h-270z" fill="#fb651e"/><path d="m271 218-46.3-86.8h21.2l27.3 54.9c0.42 0.979 0.909 1.99 1.47 3.04 0.559 1.05 1.05 2.13 1.47 3.25 0.281 0.42 0.489 0.804 0.63 1.15 0.14 0.349 0.279 0.663 0.42 0.943 0.698 1.4 1.33 2.76 1.89 4.09 0.559 1.33 1.05 2.55 1.47 3.67 1.12-2.38 2.34-4.93 3.67-7.65 1.33-2.73 2.69-5.56 4.09-8.49l27.7-54.9h19.7l-46.8 87.9v56h-17.8z" fill="#fff" fill-rule="nonzero"/></g>
         </svg>
         <span>Submit to HN</span>
     </a>
