--- a/templates/snippets/social.html
+++ b/templates/snippets/social.html
@@ -15,12 +15,12 @@
 
 <meta property="og:title" content="{{ page.title }} | Matthias Endler" />
 <meta property="og:type" content="website" />
-<meta property="og:description" content="{{ social_description | striptags | safe }}" />
+<meta property="og:description" content="{{ social_description | safe | striptags }}" />
 <meta property="og:url" content="https://endler.dev{{ page.path | safe }}" />
 <meta property="og:image" content="{{ social_img | safe }}" />
 
 <meta name="twitter:title" content="{{ page.title | safe }}">
-<meta name="twitter:description" content="{{ social_description | striptags | safe }}">
+<meta name="twitter:description" content="{{ social_description | safe | striptags }}">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@matthiasendler">
 <meta name="twitter:creator" content="@matthiasendler">
