--- a/templates/snippets/teaser.html
+++ b/templates/snippets/teaser.html
@@ -4,9 +4,9 @@
     <h2><a href="{{page.earlier.permalink}}">{{ page.earlier.title }}</a></h2>
     <p>
       {% if page.earlier.summary %}
-        {{ page.earlier.summary | striptags | safe }}
+        {{ page.earlier.summary | safe | striptags }}
       {% elif page.earlier.extra.excerpt %}
-        {{ page.earlier.extra.excerpt | striptags | safe }}
+        {{ page.earlier.extra.excerpt | safe | striptags }}
       {% else %}
         {{ page.earlier.content | striptags | truncate(length=300) | safe }}
       {% endif %}
