--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,7 @@
 
 {% block header %}
 <title>About Matthias Endler</title>
-<meta name="thumbnail" content="https://endler.dev/matthias-endler.jpg" />
+<meta name="thumbnail" content="https://endler.dev/about/matthias-endler.jpg" />
 {% endblock header %}
 
 {% block content %}
