--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,8 @@
-{% import "_macros.html" as macros %} {% set css =
-load_data(path="public/main.css") %}
+{% import "_macros.html" as macros %} 
+{% set css = load_data(path="public/main.css") %}
+{% set logo = load_data(path="static/logo.svg") %}
+{% set logo_font_light = load_data(path="static/logo_font_light.svg") %}
+{% set logo_font_dark = load_data(path="static/logo_font_dark.svg") %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,7 +14,11 @@ load_data(path="public/main.css") %}
     <title>Matthias Endler</title>
     {%- endblock header %}
     <link rel="canonical" href="{{ current_url | safe }}" />
-    <link
+
+    <link rel="icon" href="data:image/svg+xml;utf8,{{ logo }}" />
+
+
+    <!-- <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="/apple-touch-icon.png?v=m2llJQPQq8"
@@ -27,13 +34,14 @@ load_data(path="public/main.css") %}
       type="image/png"
       sizes="16x16"
       href="/favicon-16x16.png?v=m2llJQPQq8"
-    />
-    <link
+    /> -->
+    <!-- <link
       rel="mask-icon"
       href="/safari-pinned-tab.svg?v=m2llJQPQq8"
       color="#5bbad5"
-    />
-    <link rel="shortcut icon" href="/favicon.ico?v=m2llJQPQq8" />
+    /> -->
+    <!-- <link rel="shortcut icon" href="/favicon.ico?v=m2llJQPQq8" /> -->
+
     <link href="/rss.xml" rel="alternate" type="application/rss+xml" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -49,9 +57,6 @@ load_data(path="public/main.css") %}
     <div class="container">
       <header>
         <div class="navwrapper">
-          {% set logo = load_data(path="static/logo.svg") %}
-          {% set logo_font_light = load_data(path="static/logo_font_light.svg") %}
-          {% set logo_font_dark = load_data(path="static/logo_font_dark.svg") %}
 
           <a href="/" aria-label="Go back to homepage">
             {# The logo class allows overwriting the image if needed #}
