--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,16 +12,16 @@ $grey-500: #111;
 $anim-duration: 150ms;
 $border-radius: 4px;
 
-// Default font
+/* Default font */
 $serif: "Book Antiqua", "Palatino Linotype", Palatino, "EB Garamond", serif;
-// Button font
+/* Button font */
 $sans-serif: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
   sans-serif, Apple Color Emoji, Segoe UI Emoji;
-// Code font
+/* Code font */
 $monospace: operator mono, sfmono-regular, Consolas, liberation mono, Menlo,
   Courier, monospace;
 
-// Tiny reset
+/* Tiny reset */
 html,
 body,
 div,
