--- a/templates/about.html
+++ b/templates/about.html
@@ -25,6 +25,11 @@ img:hover {
     -webkit-box-shadow: 4px 4px 5px var(--img-shadow-color);
     -khtml-box-shadow: 4px 4px 5px var(--img-shadow-color);
 }
+
+/* Normal links in the stars table look quite busy */
+table a {
+    text-decoration: none;
+}
 </style>
 {% endblock header %}
 
