Clean up icon style in dark mode
brightness isn't really needed anymore (I guess)
and so we can merge it with pre and code

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -600,10 +600,7 @@ h4 {
     text-decoration-color: white;
   }
 
-  .icon {
-    filter: brightness(0) invert(1);
-  }
-
+  .icon,
   pre,
   code {
     filter: invert(1);
