--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,19 +9,13 @@
   --grey-300: #b9b9b9;
   --grey-400: #555;
   --grey-500: #111;
+  --anim-duration: 150ms;
+  --border-radius: 4px;
+  --serif: "Book Antiqua", "Palatino Linotype", Palatino, "EB Garamond", serif;
+  --sans-serif: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+  --monospace: operator mono, sfmono-regular, Consolas, liberation mono, Menlo, Courier, monospace;
 }
 
-$anim-duration: 150ms;
-$border-radius: 4px;
-
-/* Default font */
-$serif: "Book Antiqua", "Palatino Linotype", Palatino, "EB Garamond", serif;
-/* Button font */
-$sans-serif: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-  sans-serif, Apple Color Emoji, Segoe UI Emoji;
-/* Code font */
-$monospace: operator mono, sfmono-regular, Consolas, liberation mono, Menlo,
-  Courier, monospace;
 
 /* Tiny reset */
 html,
@@ -40,7 +34,7 @@ h2 {
 /* Style */
 
 body {
-  font-family: $serif;
+  font-family: var(--serif);
   font-size: 1.2em;
   line-height: 1.58;
   color: --grey-500;
@@ -108,7 +102,7 @@ main video,
 iframe {
   max-width: 100%;
   height: auto;
-  border-radius: $border-radius;
+  border-radius: var(--border-radius);
 }
 
 .homepage h1 {
@@ -178,13 +172,13 @@ header nav li {
   background: var(--grey-200);
   display: inline-block;
   font-weight: 500;
-  border-radius: $border-radius;
+  border-radius: var(--border-radius);
   border: 1px solid rgba(27, 31, 35, 0.15);
   text-decoration: none;
   box-shadow: 0 1px 0 rgba(27, 31, 35, 0.04),
     inset 0 1px 0 hsla(0, 0%, 100%, 0.25);
   transition: background-color 0.2s cubic-bezier(0.3, 0, 0.5, 1);
-  font-family: $sans-serif;
+  font-family: var(--sans-serif);
   padding: 7px 16px;
   white-space: nowrap;
 }
@@ -214,12 +208,12 @@ header nav li {
 
 pre,
 code {
-  font-family: $monospace;
+  font-family: var(--monospace);
 }
 
 pre {
   display: inline-grid;
-  border-radius: $border-radius;
+  border-radius: var(--border-radius);
   width: 100%;
   padding: 10px;
 }
@@ -237,12 +231,12 @@ pre > code {
 :not(pre) > code {
   color: var(--grey-500);
   background: var(--grey-200);
-  border-radius: $border-radius;
+  border-radius: var(--border-radius);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.125);
 }
 
 blockquote {
-  border-left: $border-radius solid var(--blue-300);
+  border-left: var(--border-radius) solid var(--blue-300);
   font-style: italic;
   margin: 4px 10px;
   padding: 0px 20px;
@@ -258,7 +252,7 @@ a {
   text-decoration: underline;
   text-decoration-color: var(--pink-400);
   text-decoration-thickness: 2px;
-  transition: text-decoration-color $anim-duration;
+  transition: text-decoration-color var(--anim-duration);
   text-underline-offset: 2px;
 }
 
@@ -303,7 +297,7 @@ a:hover {
   float: left;
   margin: 5px;
   background-repeat: no-repeat;
-  transition: opacity $anim-duration ease-in;
+  transition: opacity var(--anim-duration) ease-in;
 }
 
 .icon:hover {
@@ -430,8 +424,8 @@ details {
     padding: 20px;
     margin: 30px 0;
     background: lightyellow;
-    border: $border-radius solid peachpuff;
-    border-radius: $border-radius;
+    border: var(--border-radius) solid peachpuff;
+    border-radius: var(--border-radius);
 }
 
 summary {
@@ -538,7 +532,7 @@ h4 {
 .tags {
   font-size: 80%;
   opacity: 0.5;
-  transition: $anim-duration ease-in;
+  transition: var(--anim-duration) ease-in;
   margin-bottom: 12px;
 }
 
@@ -554,7 +548,7 @@ h4 {
   font-style: italic;
   border: 1px solid var(--grey-500);
   background: var(--grey-200);
-  transition: $anim-duration ease-in;
+  transition: var(--anim-duration) ease-in;
 }
 
 .post-meta .tag {
