--- a/templates/_macros.html
+++ b/templates/_macros.html
@@ -1,3 +1,11 @@
+{% macro css(path) %}
+    {% if current_url is starting_with("http://127.0.0.1:1111/") %}
+        <link rel="stylesheet" href="{{path}}">
+    {% else %}
+        <style>{{ load_data(path="public/" ~ path) | trim | safe }}</style>
+    {% endif %}
+{% endmacro input %}
+
 {% macro nicedate(date) %}
 {% set daynum = date | date(format="%-d") %}
 {% if daynum == "1" %}
