--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% import "_macros.html" as macros %} 
-{% set css = load_data(path="public/main.css") %}
+{% set css = load_data(path="static/main.css") %}
 {% set logo = load_data(path="static/logo.svg") %}
 {% set logo_font_light = load_data(path="static/logo_font_light.svg") %}
 {% set logo_font_dark = load_data(path="static/logo_font_dark.svg") %}
@@ -7,9 +7,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <style>
-      {{ css | safe }}
-    </style>
+    {{ macros::css(path="/main.css") }}
     {%- block header %}
     <title>Matthias Endler</title>
     {%- endblock header %}
