Move to pure CSS instead of Sass

--- a/static/css/video.css
+++ b/static/css/video.css
@@ -1,6 +1,6 @@
-/* Adapted from 
- *  Light YouTube Embeds by @labnol 
- *  https://www.labnol.org/internet/light-youtube-embeds/27941/
+/* 
+ * Adapted from Light YouTube Embeds by @labnol 
+ * https://www.labnol.org/internet/light-youtube-embeds/27941/
  */
 
 .light-video-embed {
