--- a/templates/shortcodes/video.html
+++ b/templates/shortcodes/video.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ get_url(path="video.css") }}" />
+<link rel="stylesheet" href="{{ get_url(path="css/video.css") }}" />
 <script defer src="/video.js"></script>
 <div 
   class="light-video-embed" 
