Fix broken teaser section

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
         {% endblock content %}
       </main>
     </div>
-    {% block teaser %} {% endblock teaser %} {% include "snippets/footer.html"
-    %}
+    {% block teaser %} {% endblock teaser %}
+    {% include "snippets/footer.html" %}
   </body>
 </html>
