--- a/templates/page.html
+++ b/templates/page.html
@@ -1,8 +1,7 @@
 {% extends "index.html" %}
 
 {%- block header %}
-<title>{{ page.title }}
-    | Matthias Endler</title>
+<title>{{ page.title }} | Matthias Endler</title>
 <link rel="canonical" href="{{ page.permalink | safe }}">
 {%- if page.extra.css %}
     <link href="./article.css" rel="stylesheet"/>
