--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -1,32 +1,37 @@
 <footer>
-    <div class="body">
-        <div>
-            <h2><a href="/about">About me</a></h2>
-            <p>
-                I'm <a href="/about">Matthias Endler</a>, a Backend Engineer running <i><a href="https://hello-rust.show/">Hello, Rust!</a></i>, a YouTube
-                channel about the Rust programming language,
-                <a href="https://codeprints.dev">codeprints.dev</a>, a shop for printing your GitHub timeline,
-                and <a href="https://analysis-tools.dev/">analysis-tools.dev</a>, an open platform for static code analysis tools.
-                On this blog, you'll mostly find articles about programming in
-                <a href="/2017/yes/">Rust</a> and <a href="/2018/go-io-testing/">Golang</a> or developer tools like <a
-                    href="/2017/makefiles/">make</a> and <a href="/2018/ten-years-of-vim/">Vim</a>. 
-                    Don't know where to start? Check out the <a href="/archive">blog archive</a> or my <a href="/about">about page</a>.
-            </p>
-        </div>
-        <div>
-            <h2><a href="https://github.com/sponsors/mre/">Support</a></h2>
-            <p>
-                Some links on this blog are <i>affiliate links</i> and I earn a small
-                comission if you end up buying something on the partner site (at
-                no extra cost for you), which I use to cover maintenance
-                costs. I only link to books and resources that I'd personally recommend to friends.
-            </p>
-            <p>
-                Maintaining this blog and my projects is a lot of work and I'd
-                love to spend a bigger part of my life writing and creating open source projects.
-                If you like to support me in this goal, the best way would be to <a
-                href="https://github.com/sponsors/mre/">become a sponsor</a> ❤️.
-            </p>
-        </div>
+  <div class="body">
+    <div>
+      <h2><a href="/about">About me</a></h2>
+      <p>
+        I'm <a href="/about">Matthias Endler</a>, a Backend Engineer at
+        <a href="https://corrode.dev">corrode</a>, helping clients make their
+        Rust code faster and more idiomatic. I maintain
+        <a href="https://analysis-tools.dev/">analysis-tools.dev</a>, an open
+        platform for static code analysis tools and
+        <a href="https://github.com/mre/idiomatic-rust">Idiomatic Rust</a>.
+        Previously, I ran
+        <i><a href="https://hello-rust.show/">Hello, Rust!</a></i
+        >, a YouTube channel about the Rust programming language and
+        <a href="https://codeprints.dev">codeprints.dev</a>, a shop for printing
+        your GitHub timeline. For more info, check out the
+        <a href="/about">about page</a> or my
+        <a href="/archive">blog archive</a>.
+      </p>
     </div>
+    <div>
+      <h2><a href="https://github.com/sponsors/mre/">Support</a></h2>
+      <p>
+        Some links on this blog are <i>affiliate links</i> and I earn a small
+        comission if you end up buying something on the partner site (at no
+        extra cost for you), which I use to cover maintenance costs. I only link
+        to books and resources that I'd personally recommend to friends.
+      </p>
+      <p>
+        Maintaining this blog and my projects is a lot of work and I'd love to
+        spend a bigger part of my life writing and creating open source
+        projects. If you like to support me in this goal, the best way would be
+        to <a href="https://github.com/sponsors/mre/">become a sponsor</a> ❤️.
+      </p>
+    </div>
+  </div>
 </footer>
