Update about page and footer

--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -3,9 +3,9 @@
     <div>
       <h2><a href="/about">About me</a></h2>
       <p>
-        I'm <a href="/about">Matthias Endler</a>, a Backend Engineer at
-        <a href="https://corrode.dev">corrode</a>, helping clients make their
-        Rust code faster and more idiomatic. I maintain
+        I'm <a href="/about">Matthias Endler</a>, an open-source maintainer and
+        Rust consultant at <a href="https://corrode.dev">corrode</a>, helping
+        clients make their Rust code faster and more idiomatic. I maintain
         <a href="https://analysis-tools.dev/">analysis-tools.dev</a>, an open
         platform for static code analysis tools and
         <a href="https://github.com/mre/idiomatic-rust">Idiomatic Rust</a>.
