--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,10 +14,11 @@
   --anim-duration: 150ms;
   --border-radius: 4px;
   --serif: "Book Antiqua", "Palatino Linotype", Palatino, "EB Garamond", serif;
-  --sans-serif: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
-  --monospace: operator mono, sfmono-regular, Consolas, liberation mono, Menlo, Courier, monospace;
+  --sans-serif: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+    sans-serif, Apple Color Emoji, Segoe UI Emoji;
+  --monospace: operator mono, sfmono-regular, Consolas, liberation mono, Menlo,
+    Courier, monospace;
 }
-
 
 /* Tiny reset */
 html,
@@ -97,6 +98,7 @@ main {
 
 main article {
   margin-bottom: 48px;
+  overflow-wrap: anywhere;
 }
 
 main img,
@@ -274,7 +276,7 @@ a {
 
 table {
   width: 100%;
-  border-collapse: collapse; 
+  border-collapse: collapse;
 }
 
 th,
@@ -423,15 +425,15 @@ input:focus::placeholder {
 }
 
 details {
-    padding: 20px;
-    margin: 30px 0;
-    background: lightyellow;
-    border: var(--border-radius) solid peachpuff;
-    border-radius: var(--border-radius);
+  padding: 20px;
+  margin: 30px 0;
+  background: lightyellow;
+  border: var(--border-radius) solid peachpuff;
+  border-radius: var(--border-radius);
 }
 
 summary {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /* Styles for small screens */
@@ -587,7 +589,8 @@ summary {
     filter: invert(1);
   }
 
-  .info, details {
+  .info,
+  details {
     background: var(--blue-800);
     border-color: var(--grey-400);
   }
