Add boot / bootstrap to the list

--- a/templates/shortcodes/figure.html
+++ b/templates/shortcodes/figure.html
@@ -22,6 +22,10 @@
             alt="{{ credits }}"
         {% endif %}
 
+        {% if invert %}
+            class="invert"
+        {% endif %}
+
         {# Give the browser a hand by telling it the image width upfront #}
         {# It will then reserve the necessary space and avoid layout changes #}
         {% if width %}
