Add Mastodon icon

--- a/templates/snippets/nav.html
+++ b/templates/snippets/nav.html
@@ -1,6 +1,7 @@
 {% set home = load_data(path="static/icons/home.svg") %}
 {% set github = load_data(path="static/icons/github.svg") %}
 {% set twitter = load_data(path="static/icons/twitter.svg") %}
+{% set mastodon = load_data(path="static/icons/mastodon.svg") %}
 {% set rss = load_data(path="static/icons/rss.svg") %}
 {% set search = load_data(path="static/icons/search.svg") %}
 
@@ -14,6 +15,12 @@
         <li>
             <a class="icon" href="https://github.com/mre" title="Github" aria-label="Github">
                 {{ github | safe }}
+            </a>
+        </li>
+        <li>
+            <a class="icon" href="https://mastodon.social/@mre" title="Mastodon"
+                aria-label="Mastodon">
+                {{ mastodon | safe }}
             </a>
         </li>
         <li>
