--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -5,16 +5,28 @@
       <p>
         I'm <a href="/about">Matthias Endler</a>, an open-source maintainer and
         Rust consultant at <a href="https://corrode.dev">corrode</a>, helping
-        clients make their Rust code faster and more idiomatic. I maintain
+        clients make their Rust code faster and more idiomatic.
+      </p>
+      <p>
+        I am the co-founder of
+        <a href="https://openpodcast.app">Open Podcast</a>, a pro-tool for
+        podcast analytics (like Google Analytics, but for podcasts).
+      </p>
+      <p>
+        With a passion for linters and static code analysis, I also maintain
         <a href="https://analysis-tools.dev/">analysis-tools.dev</a>, an open
-        platform for static code analysis tools and
-        <a href="https://github.com/mre/idiomatic-rust">Idiomatic Rust</a>.
-        Previously, I ran
-        <i><a href="https://hello-rust.show/">Hello, Rust!</a></i
-        >, a YouTube channel about the Rust programming language and
-        <a href="https://codeprints.dev">codeprints.dev</a>, a shop for printing
-        your GitHub timeline. For more info, check out the
-        <a href="/about">about page</a> or my
+        platform with 600+ tools listed.
+      </p>
+      <p>
+        Prior ventures include
+        <a href="https://hello-rust.show/">Hello, Rust!</a>, a YouTube channel
+        about the Rust programming language and
+        <a href="https://codeprints.dev">codeprints</a>, a shop for getting art
+        prints of your GitHub timeline.
+      </p>
+      <p>
+        For more info, check out my
+        <a href="/about">about page</a> or the
         <a href="/archive">blog archive</a>.
       </p>
     </div>
@@ -28,7 +40,7 @@
       </p>
       <p>
         Maintaining this blog and my projects is a lot of work and I'd love to
-        spend a bigger part of my life writing and creating open source
+        spend a bigger part of my life writing and maintaining open source
         projects. If you like to support me in this goal, the best way would be
         to <a href="https://github.com/sponsors/mre/">become a sponsor</a> ❤️.
       </p>
