--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
     <title>Matthias Endler</title>
     {%- endblock header %}
     <link rel="canonical" href="{{ current_url | safe }}" />
+    <link rel="me" href="https://mastodon.social/@mre">
 
     <link rel="icon" href="data:image/svg+xml;utf8,{{ logo }}" />
 
