--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,9 @@
       name="description"
       content="Personal website of Matthias Endler, a Software Engineer interested in low-level programming and Backend development. Rust, Go"
     />
+
+    <link rel="stylesheet" type="text/css" href="/syntax-theme-dark-custom.css" media="(prefers-color-scheme: dark)" />
+    <link rel="stylesheet" type="text/css" href="/syntax-theme-light-custom.css" media="(prefers-color-scheme: light)" />
   </head>
 
   <body>
